# VideoEncoder

./: .gitignore  CMakeLists.txt  README.md  videoencoder.cc  videoencoder.h
src/: encoder.h  main.cc  videoencoder.cc  videoencoder.h
src/encoders/: baseencoder.cc  baseencoder.h  gaussianblur.cc  gaussianblur.h  none.cc  none.h  preview.cc  preview.h
